# lie_learn

./: MANIFEST.in  pyproject.toml  setup.py
lie_learn/spaces/: spherical_quadrature.pyx
