[build-system]
requires = [
    "setuptools>=68.0",
    "wheel>=0.40",
    "cython>=3.0",
    "numpy>=2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lie_learn"
version = "0.0.2"
description = "A python package that knows how to do various tricky computations related to Lie groups and manifolds (mainly the sphere S2 and rotation group SO3)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.25",
    "scipy>=1.10",
    "requests",
]

[project.urls]
"Source Code" = "https://github.com/kephale/lie_learn"
"Original Source" = "https://github.com/AMLab-Amsterdam/lie_learn"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"lie_learn" = ["**/*.npy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lie_learn*"]
